--- a/libfdo-data/Cargo.toml
+++ b/libfdo-data/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["lib"]
 
 [dependencies]
 fdo-data-formats = { path = "../data-formats", version = "0.4.6" }
